has been updated the branch from master into Haidara

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
         <title>Document</title>
     </head>
     <body>
-        <h1>Hello,This Haidara.</h1>
-        <h2>Haidara Updated The File Of Html</h2>
+        <h1>Hello,This a New Branch</h1>
 
         <script src="app.js"></script>
     </body>
